--- a/3/Exercise_3.ipynb
+++ b/3/Exercise_3.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -285,9 +285,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Voiced: \n",
+    "Coefficients are much larger in magnitude (several are >2 or 3).\n",
+    "large, structured taps → sharp vocal‐tract resonances → clear formant peaks in the spectrum\n",
+    "\n",
+    "Unvoiced: \n",
+    "Coefficents are small (well below 1), with no strong alternating pattern.\n",
+    "small, “random” taps → only slight shaping of flat noise → a smoother, flatter spectral envelope.\n",
+    "\n",
+    "\n",
     "✅ Answer:\n",
     "\n",
-    "The LP coefficients represent the filter that models the vocal tract. For the voiced segment, these coefficients capture the resonances (formants) of the vocal tract during vowel production. For the unvoiced segment, they model the spectral shape of the noise-like sound produced by turbulent airflow."
+    "The LP coefficients represent the filter that models the vocal tract. For the voiced segment, these coefficients capture the resonances (formants) of the vocal tract during vowel production. For the unvoiced segment, they model the spectral shape of the noise-like sound produced by turbulent airflow.\n",
+    "\n"
    ]
   },
   {
@@ -299,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -370,6 +380,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Voiced‐segment filter H(z)\n",
+    "-Formant peaks: In a voiced segment (e.g. a vowel), the excitation is an impulse train at the pitch frequency.\n",
+    "-Spectral valleys: Between formants the gain drops off. Because this is an all-pole filter there are no true “notches” (zeros), but the envelope still shows valleys in between the resonance peaks.\n",
+    "-Overall level: The DC gain (at 0 Hz) comes out around –5 dB here because H(0)=1/A(1)=1/(1+∑aᵢ) and ∑aᵢ turned out to be slightly positive for this segment.\n",
+    "\n",
+    "\n",
+    "Unvoiced‐segment filter H(z)\n",
+    "-Broadband shape: An unvoiced segment (a fricative or noise burst) has a noise excitation, which is spectrally flat. The LPC filter therefore learns to impose the average spectral envelope of that noisy segment.\n",
+    "-Milder resonances: There are only a few gentle bumps where the tract happened to amplify the noise a bit (for instance around 7–8 kHz if it was an “s” sound). You do not see the sharp formant peaks of a vowel.\n",
+    "-Spectral tilt / boosts: You also note a slight low-frequency lift and even a high-frequency rise right near Nyquist—this simply matches whatever low/high-band energy was present in the noise segment you picked.\n",
+    "\n",
+    "Phase response: Because none of the poles sit very close to the unit circle here, the phase is even smoother than in the voiced case and never develops the steep kinks or wraps. It’s still minimum-phase, but with a more evenly distributed pole set the phase slope is gentle everywhere.\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 4b) Why do you use np.concatenate(([1], a)) and not only a?\n",
     "\n",
     "✅ Answer:\n",
@@ -390,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -467,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -604,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -692,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -764,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
