--- a/3/Exercise_3.ipynb
+++ b/3/Exercise_3.ipynb
@@ -254,6 +254,7 @@
     "    # Compute autocorrelation\n",
     "    # We need autocorrelation values from 0 to M\n",
     "    r = np.correlate(signal, signal, mode='full')\n",
+    "    \n",
     "    # Extract the positive lags (center to right half)\n",
     "    r = r[len(signal)-1:len(signal)+order+1]\n",
     "    \n",
@@ -778,9 +779,9 @@
     "\n",
     "1. **Low orders (2-4)**: Capture only the gross spectral shape with 1-2 major peaks. These can model the overall spectral tilt but miss most formants.\n",
     "\n",
-    "2. **Medium orders (8-12)**: Provide a good balance, capturing the main formant structure (typically 3-5 formants) while still providing some smoothing. This is often sufficient for speech analysis and synthesis.\n",
+    "2. **Medium orders (8)**: Provide a good balance, capturing the main formant structure (typically 3-5 formants) while still providing some smoothing. This is often sufficient for speech analysis and synthesis.\n",
     "\n",
-    "3. **High orders (16-20)**: Capture finer spectral details, potentially including harmonics in voiced speech. While this provides a closer match to the original spectrum, it may overfit to noise or specific characteristics of the analyzed frame.\n",
+    "3. **High orders (12-20)**: Capture finer spectral details, potentially including harmonics in voiced speech. While this provides a closer match to the original spectrum, it may overfit to noise or specific characteristics of the analyzed frame.\n",
     "\n",
     "The optimal order depends on the application. For speech coding and synthesis, orders around 10-14 are common as they capture the vocal tract resonances without modeling the harmonic structure (which should come from the excitation)."
    ]
